# rag-webservice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
chroma_langchain_db/9db0ee24-da82-4850-b405-ca3d8f241787/: index_metadata.pickle
docs/: create_document_index.yml  get_documents_by_course.yml  get_models.yml  query_llm.yml  query_rag.yml
src/: LLM_Manager.py  Population.py  RAG_Manager.py  VectorDB.py  ___ws-test.sh  app.py  ws-basic.py
src/specs/: documents_by_course.yml  documents_create_index.yml  documents_delete_index.yml  documents_get_index.yml  documents_list.yml  documents_update_index.yml  llm_models_list.yml  llm_query.yml  llm_query_documents.yml  root.yml
src/utils/: document_model.py  logging.py  require_salt.py
