[tool.poetry]
name = "ollama-pdf-rag"
version = "0.1.0"
description = ""
authors = ["Niels Seidel <niels.seidel@fernuni-hagen.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
ollama = "0.4.4"
streamlit = "1.40.0"
pdfplumber = "0.11.4"
langchain = "0.3.14"
langchain-core = "0.3.29"
langchain-ollama = "0.2.2"
langchain-community = "0.3.14"
langchain-text-splitters = "0.3.5"
unstructured = {version = ">=0.16.12", extras = ["all-docs"]}
sentence-transformers = "3.3.1"
onnx = ">=1.17.0"
protobuf = "5.29.2"
chromadb = ">=0.4.22"
pillow = "10.4.0"
numpy = "1.26.4"
pytest = "7.4.4"
pytest-cov = "4.1.0"
coverage = "7.4.0"
pydantic = "2.10.4"
langchain-huggingface = "^0.1.2"
langchain-chroma = "^0.2.2"
asyncio = "^3.4.3"
flask = "^3.1.0"
rank-bm25 = "^0.2.2"
flask-cors = "^5.0.1"
flasgger = ">=0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
